k8s/deployment-postgre-english.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-english-data-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres-english-data

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-english-data-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-english-data
  template:
    metadata:
      labels:
        app: postgres-english-data
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-english-data-storage
      volumes:
        - name: postgres-english-data-storage
          persistentVolumeClaim:
            claimName: postgres-english-data-pvc
