k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8765
          - path: /simple-english/
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8765
